Final template for my resume

--- a/najamali.tex
+++ b/najamali.tex
@@ -1,7 +1,7 @@
-%-------------------------
+%-------------------------%
 % Resume in Latex
 % Author : Najam
-%------------------------
+%------------------------%
 
 
 \documentclass[letterpaper,11pt]{article}
@@ -167,18 +167,18 @@
  \resumeSubHeadingListStart
     \resumeSubheading
       {FAST-National University Of Computer and Emerging Science}{08 2021 -- Present}
-      {Bs Computer Science   - \textbf{2.67} }{Islamabad, Pakistan}
+      {Bs Computer Science    }{Islamabad, Pakistan}
   \resumeSubHeadingListEnd
   \resumeSubHeadingListStart
     \resumeSubheading
       {FAST-NUCES,}{08 2020 -- 07 2021}
-      {Bs Software Engineering - \textbf{3.33} }{Peshawer, Pakistan}
+      {Bs Software Engineering }{Peshawer, Pakistan}
   \resumeSubHeadingListEnd
  
   \resumeSubHeadingListStart
     \resumeSubheading
       {Aga Khan Higher Secondary School, Gilgit}{08 2021 -- Present}
-      {HSSC(I \& II)   - \textbf{A+} }{Gilgit Baltistan, Pakistan}
+      {HSSC(I \& II)  }{Gilgit Baltistan, Pakistan}
   \resumeSubHeadingListEnd
 
 
@@ -204,18 +204,23 @@
         \end{multicols}
         \vspace*{2.0\multicolsep}
     %\resumeSubHeadingListEnd
-
-
-
-
-
-
 %-----------PROJECTS-----------
 \section{PROJECTS}
     \vspace{-5pt}
     \resumeSubHeadingListStart
+
+    \resumeProjectHeading
+    {\href{https://github.com/Ctoic/Hostel-management-System-Project.git}{\textbf{\large{\underline{Hostel Management System}}} \href{https://github.com/Ctoic/Hostel-management-System-Project.git }{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{Html,CSS,JavaScript,PHP,SQL,Xamp }}}{04 2024}
+    \resumeItemListStart
+      \resumeItem{\normalsize{  This Project is web application built with php,javascript , html and css for managing hostels.
+
+      \textbf{highlight key points}.}}
+      \resumeItem{\textcolor{accent} {\href{Project Link} {\underline{\normalsize{Download}}}}}
+    \resumeItemListEnd
+    \vspace{-13pt}
+
       \resumeProjectHeading
-          {\href{https://github.com/Ctoic/Infix-Postfix-Prefix-Converter.git}{\textbf{\large{\underline{Infix to Postfix and Prefix Converter}}} \href{Project Link}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{C++, Data Structures, Stacks, Linked Lists }}}{MM YYYY}
+          {\href{https://github.com/Ctoic/Infix-Postfix-Prefix-Converter.git}{\textbf{\large{\underline{Infix to Postfix and Prefix Converter}}} \href{Project Link}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{C++, Data Structures, Stacks, Linked Lists }}}{03 2021}
           \resumeItemListStart
             \resumeItem{\normalsize{This project provides a simple implementation of a stack-based algorithm to convert infix expressions to postfix (Reverse Polish Notation) and prefix (Polish Notation) expressions. It also includes functionality to evaluate postfix expressions.
 
@@ -227,15 +232,8 @@
           \resumeProjectHeading
           {\href{https://github.com/Ctoic/Algorithm-Visualizer-Using-pygame}{\textbf{\large{\underline{Algorithm Visualizer}}} \href{https://github.com/Ctoic/Algorithm-Visualizer-Using-pygame}{\raisebox{-0.1\height}\faExternalLink }} $|$ \large{\underline{Python, Pygame}}}{04 2022}
           \resumeItemListStart
-            \resumeItem{\normalsize{In this project we have used python language because of it's extensive librarires and easy syntax. By using the pygame library we will visualize all the sorting algorithm. By looking at the graph how data is sorted we will analyze which sorting technique perform best under a specificc situatiion. Before writing the prgoram we will setup the Envirement for pygame and we will Install the pakages. The Gui will be provided by pygame. After installation we are good to run the python program to visualize sorting algorithms on the screen. \textbf{Insertion sort
-            Bubble sort
-            Merge Sort
-            Quick Sort
-            Count Sort
-            Selection Sort
-            Heap Sort
-            Radix Sort
-            Bucket Sort} }}
+            \resumeItem{\normalsize{In this project we have used python language because of it's extensive librarires and easy syntax. \textbf{Insertion sort
+            All Sorting Algorithm implementation} }}
            
           \resumeItemListEnd
 
@@ -255,19 +253,13 @@
           \resumeItemListEnd
           \vspace{-13pt}
  
-
-         
     \resumeSubHeadingListEnd
 \vspace{-1pt}
-
-
 %-----------EXPERIENCE-----------
 \section{INTERNSHIP}
   \resumeSubHeadingListStart
-
-
     \resumeSubheading
-      {Github Education \href{[![An image of @ctoic's Holopin badges, which is a link to view their full Holopin profile](https://holopin.me/ctoic)](https://holopin.io/@ctoic)}{\raisebox{-0.1\height}\faExternalLink }}{10 2023 -- 11 2023}
+      {Github Education \href{https://github.com/Ctoic/CalHub.git}{\raisebox{-0.1\height}\faExternalLink }}{10 2023 -- 11 2023}
       {\underline{Maintainer and Contributer at open source Event}}{Remote, GitHub}
       \resumeItemListStart
         \resumeItem{\normalsize{About the role \textbf{Open Source , Github , Version Control , Web Development}}}
@@ -275,18 +267,18 @@
       \resumeItemListEnd  
 
       \resumeSubheading
-      {C3 Akademia\href{[![An image of @ctoic's Holopin badges, which is a link to view their full Holopin profile](https://holopin.me/ctoic)](https://holopin.io/@ctoic)}{\raisebox{-0.1\height}\faExternalLink }}{10 2023 -- 11 2023}
-      {\underline{Website Developer , Headed The Graphic and Content Creator Team,  }}{Onsite, C3 Akademia}
+      {C3 Akademia\href{https://c3akademia.com/}{\raisebox{-0.1\height}\faExternalLink }}{10 2023 -- 11 2023}
+      {\underline{Website Developer  }}{Onsite, C3 Akademia}
       \resumeItemListStart
-        \resumeItem{\normalsize{About the role \textbf{Open Source , Github , Version Control , Web Development}}}
+        \resumeItem{\normalsize{Along with my team I created website for C3 Akademia. It is an online tuition academy for CSS Aspirants. We also Wrote technical and non technical blogs to increase visitors on the website. \textbf{Web Development, WordPress,Plugins,PHP,Marketing,Graphic Design}}}
  
       \resumeItemListEnd  
 
       \resumeSubheading
-      {Github Education \href{[![An image of @ctoic's Holopin badges, which is a link to view their full Holopin profile](https://holopin.me/ctoic)](https://holopin.io/@ctoic)}{\raisebox{-0.1\height}\faExternalLink }}{10 2023 -- 11 2023}
-      {\underline{Maintainer and Contributer at open source Event}}{Remote, GitHub}
+      {Comprehensive Community Care Hostel }{12 2022 -- Present}
+      {\underline{Manager}}{Onsite, Islamabad}
       \resumeItemListStart
-        \resumeItem{\normalsize{About the role \textbf{Open Source , Github , Version Control , Web Development}}}
+        \resumeItem{\normalsize{As a manager I have to supervise 35 student and 3 employee. We conduct seminars and workshops realted to latest technology.\textbf{Management,Communication,Community,Leadership}}}
  
       \resumeItemListEnd  
 
@@ -296,39 +288,74 @@
 \section{TECHNICAL SKILLS}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{\normalsize{Languages:}}{ \normalsize{Python, Java, C, C++, Dart, JavaScript, SQL, NoSQL, R, XML, Go}} \\
-     \textbf{\normalsize{Developer Tools:}}{ \normalsize{VS Code, Android Studio, DataGrip, Goland, Intellij Idea Ultimate, Visual Studio}} \\
-     \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{ Linux, GitHub, ReactJS, Bootstrap,Streamlit,WordPress, NextJS, Git, Mongo, Flutter}} \\
+     \textbf{\normalsize{Languages:}}{ \normalsize{Python, Java, C, C++, JavaScript, SQL, R}} \\
+     \textbf{\normalsize{Developer Tools:}}{ \normalsize{VS Code, Android Studio, Intellij Idea Ultimate, Visual Studio,Beekeper Studio,Blender,Figma,Canva,Linux}} \\
+     \textbf{\normalsize{Technologies/Frameworks:}}{\normalsize{ Linux, GitHub, ReactJS, Bootstrap,Streamlit,WordPress, Git, Mongo,Gradio,.net ,Netlify}} \\
     }}
  \end{itemize}
  \vspace{-15pt}
 
 
+%-----------INVOLVEMENT---------------
+\section{Achievements}
+\resumeSubHeadingListStart
+    \resumeSubheading{Dean's List   }{Bs Software Engineering}{\underline{}}{Fast-Nuces,Peshawer}
+        \resumeItemListStart
+            \resumeItem{\normalsize{For Securing a GPA over 3.5/4 in fall 2020. I was added in the Dean's List.}}
+        \resumeItemListEnd
+
+      
+        \resumeSubheading{Bronze Medal }{Bs Software Engineering}{\underline{}}{Fast-NUCES, Peshawer}
+        \resumeItemListStart
+            \resumeItem{\normalsize{I got third position in my department for the fall semester 2020.}}
+        \resumeItemListEnd
+
+        
+\resumeSubHeadingListEnd
+\vspace{-11pt} 
 
 
 %-----------INVOLVEMENT---------------
 \section{EXTRACURRICULAR}
     \resumeSubHeadingListStart
-        \resumeSubheading{Ismaili Boy Scout Association \href{Certificate Proof link}{\raisebox{-0.1\height}\faExternalLink } }{MM YYYY -- MM YYYY}{\underline{Role}}{Location}
+        \resumeSubheading{Ismaili Boy Scout Association  }{02 2007 -- Present}{\underline{Head Media}}{Gilgit Baltistan}
             \resumeItemListStart
-                \resumeItem{\normalsize{Helping community in need and teaching the young generation to equip their self with the latest technology. \textbf{and responsibilities carried out.}}}
+                \resumeItem{\normalsize{Helping community in need and teaching the young generation to equip their self with the latest technology. I was eager to contribute to my community from a young age, I was 7 when I joined the organization as a Shaheen Scout then I become a Boyscout finally I headed the scout in 2015. But then I have to move to city for education I left my position but I always conduct online meeting and drives to help the community.}}
                 \resumeItem{\normalsize{Participation Certificate. \href{ParticipationCertificateLink.com}{\raisebox{-0.1\height}\faExternalLink }}}
             \resumeItemListEnd
 
-            \resumeSubheading{Comprehensive Community Care C3 \href{Certificate Proof link}{\raisebox{-0.1\height}\faExternalLink } }{MM YYYY -- MM YYYY}{\underline{Role}}{Location}
+          
+            \resumeSubheading{Fast Developer Club }{11 2021 -- 04 2023}{\underline{Web Developer}}{Fast-NUCES, Islamabad}
             \resumeItemListStart
-                \resumeItem{\normalsize{Helping community in need and teaching the young generation to equip their self with the latest technology. \textbf{and responsibilities carried out.}}}
-                \resumeItem{\normalsize{Participation Certificate. \href{ParticipationCertificateLink.com}{\raisebox{-0.1\height}\faExternalLink }}}
+                \resumeItem{\normalsize{Workshops on Github and Web development for the juniors at university campus. Organized Web dev competitions at University Biggest Event.}}
             \resumeItemListEnd
 
-            \resumeSubheading{Fast Developer Club\href{Certificate Proof link}{\raisebox{-0.1\height}\faExternalLink } }{MM YYYY -- MM YYYY}{\underline{Role}}{Location}
+            \resumeSubheading{NASCON }{02 2023 -- 06 2023}{\underline{Event Organizer}}{Fast Islamabad}
             \resumeItemListStart
-                \resumeItem{\normalsize{Helping community in need and teaching the young generation to equip their self with the latest technology. \textbf{and responsibilities carried out.}}}
-                \resumeItem{\normalsize{Participation Certificate. \href{ParticipationCertificateLink.com}{\raisebox{-0.1\height}\faExternalLink }}}
+                \resumeItem{\normalsize{Coordinated events and activities for NASCON, focusing on technoWeb logy and innovation.}}
+            \resumeItemListEnd
+
+
+            \resumeSubheading{Head Boy }{02 2018 -- 04 2020}{\underline{Head Boy}}{Aga Khan Higher Secondry School Gilgit}
+            \resumeItemListStart
+                \resumeItem{\normalsize{Led student council initiatives and represented the student body in various functions.}}
             \resumeItemListEnd
             
     \resumeSubHeadingListEnd
  \vspace{-11pt} 
+ \section{HOBBIES}
+\resumeSubHeadingListStart
+\resumeSubheading{}{}{}{}
+\resumeItemListStart
+\resumeItem{\normalsize{Reading and watching science fiction books and movies.}}
+\resumeItem{\normalsize{Playing football and working out at the gym.}}
+\resumeItem{\normalsize{Gardening and growing a variety of plants.}}
+\resumeItem{\normalsize{Mountaineering and exploring new heights.}}
+\resumeItem{\normalsize{Swimming and improving aquatic skills.}}
+\resumeItem{\normalsize{Storytelling and engaging audiences with creative tales.}}
+\resumeItemListEnd
+\resumeSubHeadingListEnd
+
 \end{document}
 
 
