added Tiles Mountain Expereice as Backend Developer

--- a/najamali.tex
+++ b/najamali.tex
@@ -259,31 +259,34 @@
 \section{INTERNSHIP}
   \resumeSubHeadingListStart
     \resumeSubheading
+      {Tiles Mountain}{06 2023 -- 09 2023}
+      {\underline{Backend Developer}}{Onsite, Tiles Mountain}
+      \resumeItemListStart
+        \resumeItem{\normalsize{Started with the basics of PHP, created an Ecommerce website using the PHP MVC approach with a coworker, explored Magento, including admin and user sites, and implemented custom coding by creating modules. Gained hands-on experience with Docker, version control (Git and GitHub), and improved communication and problem-solving skills. \textbf{PHP, MVC, Magento,JavaScript,CSS,Html,Ajax, Docker, Git, GitHub, Communication, Problem Solving}}}
+      \resumeItemListEnd
+  
+    \resumeSubheading
       {Github Education \href{https://github.com/Ctoic/CalHub.git}{\raisebox{-0.1\height}\faExternalLink }}{10 2023 -- 11 2023}
-      {\underline{Maintainer and Contributer at open source Event}}{Remote, GitHub}
+      {\underline{Maintainer and Contributor at Open Source Event}}{Remote, GitHub}
       \resumeItemListStart
-        \resumeItem{\normalsize{About the role \textbf{Open Source , Github , Version Control , Web Development}}}
- 
+        \resumeItem{\normalsize{Contributed to and maintained an open-source project. \textbf{Open Source, GitHub, Version Control, Web Development}}}
       \resumeItemListEnd  
 
-      \resumeSubheading
+    \resumeSubheading
       {C3 Akademia\href{https://c3akademia.com/}{\raisebox{-0.1\height}\faExternalLink }}{10 2023 -- 11 2023}
-      {\underline{Website Developer  }}{Onsite, C3 Akademia}
+      {\underline{Website Developer}}{Onsite, C3 Akademia}
       \resumeItemListStart
-        \resumeItem{\normalsize{Along with my team I created website for C3 Akademia. It is an online tuition academy for CSS Aspirants. We also Wrote technical and non technical blogs to increase visitors on the website. \textbf{Web Development, WordPress,Plugins,PHP,Marketing,Graphic Design}}}
- 
+        \resumeItem{\normalsize{Collaborated with a team to create a website for an online tuition academy for CSS aspirants. Contributed to writing technical and non-technical blogs to increase website traffic. \textbf{Web Development, WordPress, Plugins, PHP, Marketing, Graphic Design}}}
       \resumeItemListEnd  
 
-      \resumeSubheading
+    \resumeSubheading
       {Comprehensive Community Care Hostel }{12 2022 -- Present}
       {\underline{Manager}}{Onsite, Islamabad}
       \resumeItemListStart
-        \resumeItem{\normalsize{As a manager I have to supervise 35 student and 3 employee. We conduct seminars and workshops realted to latest technology.\textbf{Management,Communication,Community,Leadership}}}
- 
+        \resumeItem{\normalsize{Supervised 35 students and 3 employees, organized seminars and workshops on the latest technology. \textbf{Management, Communication, Community, Leadership}}}
       \resumeItemListEnd  
-
   \resumeSubHeadingListEnd
-\vspace{-12pt}
+
 %-----------PROGRAMMING SKILLS-----------
 \section{TECHNICAL SKILLS}
  \begin{itemize}[leftmargin=0.15in, label={}]
